--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -110,7 +110,7 @@ carbon-containing dimers},
   volume = {112},
   shorttitle = {Fragmentation {{Methods}}},
   number = {1},
-  journal = {Chemical Reviews},
+  journal = {Chem. Rev.},
   author = {Gordon, Mark S. and Fedorov, Dmitri G. and Pruitt, Spencer R. and Slipchenko, Lyudmila V.},
   title = {Fragmentation methods: a route to accurate calculations on large systems},
   year = {2012},
@@ -390,7 +390,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {135},
         doi = {10.1063/1.3664300},
         number = {21},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {Ihrig, Arvid Conrad and Schiffmann, Christoph and Sebastiani, Daniel},
         month = dec,
         year = {2011},
@@ -403,7 +403,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {110},
         doi = {10.1063/1.478083},
         number = {1},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {Zhang, Yingkai and Lee, Tai-Sung and Yang, Weitao},
         month = dec,
         year = {1998},
@@ -416,7 +416,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {116},
         doi = {10.1063/1.1477182},
         number = {22},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {DiLabio, Gino A. and Hurley, Margaret M. and Christiansen, Phillip A.},
         month = may,
         year = {2002},
@@ -429,7 +429,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {122},
         doi = {10.1063/1.1839857},
         number = {4},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {DiLabio, Gino A. and Wolkow, Robert A. and Johnson, Erin R.},
         month = jan,
         year = {2005},
@@ -443,7 +443,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         doi = {10.1021/jp9809890},
         abstract = {A generalized hybrid orbital (GHO) method has been developed at the semiempirical level in combined quantum mechanical and molecular mechanical (QM/MM) calculations. In this method, a set of hybrid orbitals is placed on the boundary atom between the QM and MM fragments, and one of the hybrid orbitals participates in the SCF calculation for the atoms in the QM region. The GHO method provides a well-defined potential energy surface for a hybrid QM/MM system and is a significant improvement over the “link-atom” approach by saturating the QM valencies with hydrogen atoms. The method has been tested on small molecules and yields reasonable structural, energetic, and electronic results in comparison with the results of the corresponding QM and MM approximations. The GHO method will greatly increase the applicability of combined QM/MM methods to systems comprising large molecules, such as proteins.},
         number = {24},
-        journal = {The Journal of Physical Chemistry A},
+        journal = {J. Phys. Chem. A},
         author = {Gao, Jiali and Amara, Patricia and Alhambra, Cristobal and Field, Martin J.},
         month = jun,
         year = {1998},
@@ -458,7 +458,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         doi = {10.1016/S0009-2614(96)01165-7},
         abstract = {In this Letter we extend to the ab initio level the principles of the local self consistent field method (LSCF) developed earlier within the semiempirical approximations. It allows quantum electronic computations on a fragment of a large molecule mostly depicted by a classical force field. The bond separating the quantum subsystem from the classical one is assumed to be represented by localized orbitals introduced as data. The molecular orbitals of this subsystem are developed on a basis of functions, orthogonal to the localized orbitals, which derive from the atomic orbitals of the usual basis set by a simple linear transformation. The algorithm of the LSCF method is obtained by a simple modification of the standard Hartree-Fock or DFT codes.},
         number = {1},
-        journal = {Chemical Physics Letters},
+        journal = {Chem. Phys. Lett.},
         author = {Assfeld, Xavier and Rivail, Jean-Louis},
         month = dec,
         year = {1996},
@@ -471,7 +471,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {125},
         doi = {10.1063/1.2370947},
         number = {19},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {Jacob, Christoph R. and Visscher, Lucas},
         month = nov,
         year = {2006},
@@ -484,7 +484,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {122},
         doi = {10.1063/1.1829051},
         number = {1},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {von Lilienfeld, O. Anatole and Tavernelli, Ivano and Rothlisberger, Ursula and Sebastiani, Daniel},
         month = dec,
         year = {2004},
@@ -498,7 +498,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         doi = {10.1103/PhysRevB.71.195119},
         abstract = {Recently, we have introduced a scheme for optimizing atom-based nonlocal external potentials within the framework of density functional theory (DFT) in order to systematically improve the description of molecular properties [Phys. Rev. Lett. 93, 153004 (2004); J. Chem. Phys. 122, 014113 (2005)]. In this study, we investigate a small library of dispersion-corrected atom-centered potentials (DCACP’s) for C, Ar, Kr, and Br. To this end, we calibrate DCACP’s in order to reproduce the equilibrium distance and binding energy of MP2 potential energy surfaces of the weakly bonded homodimers Ar2, Kr2, and (Br2)2. In all cases studied, using DFT with the generalized gradient approximation functional BLYP and the DCACP’s, the influence of dispersion forces on equilibrium and transition-state geometries, interaction energies, and transition barriers can be reproduced in good agreement with MP2 calculations and without any significant increase in computational cost. The transferability of the DCACP’s to other systems is assessed by addressing various weakly bonded complexes. We investigate (i) ideal van der Waals clusters of the type ArnKrm (∀n,m=\{0,1,2,3,4\} and 2⩽n+m⩽4), (ii) the effect of DCACP’s on covalent bonds and conformers of the hydrocarbon molecule cyclooctatetraene which features a system of π bonds, and (iii) the competition of simultaneous electrostatic and dispersion forces for the equilibrium structure and transition states of the hydrogen bromide dimer (HBr)2. In all cases, the performance of the DCACP’s to these extended set of systems is remarkably good.},
         number = {19},
-        journal = {Physical Review B},
+        journal = {Phys. Rev. B},
         author = {von Lilienfeld, O. Anatole and Tavernelli, Ivano and Rothlisberger, Ursula and Sebastiani, Daniel},
         month = may,
         year = {2005},
@@ -512,7 +512,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         doi = {10.1103/PhysRevLett.93.153004},
         abstract = {We add an effective atom-centered nonlocal term to the exchange-correlation potential in order to cure the lack of London dispersion forces in standard density functional theory. Calibration of this long-range correction is performed using density functional perturbation theory and an arbitrary reference. Without any prior assignment of types and structures of molecular fragments, our corrected generalized gradient approximation density functional theory calculations yield correct equilibrium geometries and dissociation energies of argon-argon, benzene-benzene, graphite-graphite, and argon-benzene complexes.},
         number = {15},
-        journal = {Physical Review Letters},
+        journal = {Phys. Rev. Lett.},
         author = {von Lilienfeld, O. Anatole and Tavernelli, Ivano and Rothlisberger, Ursula and Sebastiani, Daniel},
         month = oct,
         year = {2004},
@@ -526,7 +526,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         doi = {10.1103/PhysRevB.54.1703},
         abstract = {We present pseudopotential coefficients for the first two rows of the Periodic Table. The pseudopotential is of an analytic form that gives optimal efficiency in numerical calculations using plane waves as a basis set. At most, seven coefficients are necessary to specify its analytic form. It is separable and has optimal decay properties in both real and Fourier space. Because of this property, the application of the nonlocal part of the pseudopotential to a wave function can be done efficiently on a grid in real space. Real space integration is much faster for large systems than ordinary multiplication in Fourier space, since it shows only quadratic scaling with respect to the size of the system. We systematically verify the high accuracy of these pseudopotentials by extensive atomic and molecular test calculations. © 1996 The American Physical Society.},
         number = {3},
-        journal = {Physical Review B},
+        journal = {Phys. Rev. B},
         author = {Goedecker, S. and Teter, M. and Hutter, J.},
         month = jul,
         year = {1996},
@@ -540,7 +540,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         doi = {10.1103/PhysRevB.58.3641},
         abstract = {We generalize the concept of separable dual-space Gaussian pseudopotentials to the relativistic case. This allows us to construct this type of pseudopotential for the whole Periodic Table, and we present a complete table of pseudopotential parameters for all the elements from H to Rn. The relativistic version of this pseudopotential retains all the advantages of its nonrelativistic version. It is separable by construction, it is optimal for integration on a real-space grid, it is highly accurate, and, due to its analytic form, it can be specified by a very small number of parameters. The accuracy of the pseudopotential is illustrated by an extensive series of molecular calculations.},
         number = {7},
-        journal = {Physical Review B},
+        journal = {Phys. Rev. B},
         author = {Hartwigsen, C. and Goedecker, S. and Hutter, J.},
         month = aug,
         year = {1998},
@@ -557,7 +557,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         abstract = {We present an approach to couple ab initio quantum mechanical geometry optimiuzations with molecular mechanical optimizations, with the added capability to carry out molecular dynamics simulations of the systems to earch for new local minima. The approach is applied to the aqueous solution CH3Cl + Cl− exchange reaction and the gas phase protonation of polyethers.},
         language = {en},
         number = {6},
-        journal = {Journal of Computational Chemistry},
+        journal = {J. Comput. Chem.},
         author = {Singh, U. Chandra and Kollman, Peter A.},
         month = dec,
         year = {1986},
@@ -570,7 +570,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {110},
         doi = {10.1063/1.478083},
         number = {1},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {Zhang, Yingkai and Lee, Tai-Sung and Yang, Weitao},
         month = dec,
         year = {1998},
@@ -583,7 +583,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {122},
         doi = {10.1063/1.1834899},
         number = {2},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {Zhang, Yingkai},
         month = dec,
         year = {2004},
@@ -596,7 +596,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {129},
         doi = {10.1063/1.2994288},
         number = {15},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {Parks, Jerry M. and Hu, Hao and Cohen, Aron J. and Yang, Weitao},
         month = oct,
         year = {2008},
@@ -609,7 +609,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         volume = {116},
         doi = {10.1063/1.1477182},
         number = {22},
-        journal = {The Journal of Chemical Physics},
+        journal = {J. Chem. Phys.},
         author = {DiLabio, Gino A. and Hurley, Margaret M. and Christiansen, Phillip A.},
         month = may,
         year = {2002},
@@ -624,7 +624,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         abstract = {This work optimizes the link bond description of the quantum mechanical/molecular mechanical separation of deoxynucleosides. The nucleosides are separated at the C-N bond between the nucleobase and the deoxyribose, with the former acting as the quantum mechanically described species. By using a flexible link atom-ansatz plus a harmonic potential to correct the energy deviation from a full quantum mechanical description, the potential energy well of the bond's stretching motion is mimicked with very high accuracy.},
         language = {English},
         number = {3},
-        journal = {Theoretical Chemistry Accounts},
+        journal = {Theor. Chem. Acc.},
         author = {Hitzenberger, Manuel and Ratanasak, Manussada and Parasuk, Vudhichai and Hofer, Thomas S.},
         month = feb,
         year = {2016},
@@ -639,7 +639,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         abstract = {The hydrogen-capping method is one of the most popular and widely used coupling-schemes for quantum mechanics/molecular mechanics (QM/MM)-molecular dynamics simulations of macromolecular systems. This is mostly due to the fact that it is fairly convenient to implement and parametrize, thus providing an excellent compromise between accuracy and computational effort. In this work, a viable and straight-forward approach to optimize the placing of the link atom on a suitable distance ratio between the frontier atoms is discussed. To further increase the accuracy, instead of global parameters for all amino acids, different parameter sets for each type of amino acid are derived. The dependency of the link bond parameters on the chemical environment and the used QM-method is probed to assess the range of applicability of the parametrization. Suitable sets of parameters for RI-MP2, B3LYP, (RI)-B3LYP-D3, and RI-BLYP-D3 at triple-zeta level for all relevant proteinogenic amino acids are presented. Furthermore, the scope and range of the perturbation, stemming from the introduction of link bonds is evaluated through application of the presented QM/MM scheme in calculations of the active site of 15S-lipoxygenase. (c) 2015 Wiley Periodicals, Inc.},
         language = {English},
         number = {26},
-        journal = {Journal of Computational Chemistry},
+        journal = {J. Comput. Chem.},
         author = {Hitzenberger, Manuel and Hofer, Thomas S.},
         month = oct,
         year = {2015},
@@ -653,7 +653,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         doi = {10.1021/cr500455b},
         language = {English},
         number = {12},
-        journal = {Chemical Reviews},
+        journal = {Chem. Rev.},
         author = {Collins, Michael A. and Bettens, Ryan P. A.},
         month = jun,
         year = {2015},
@@ -668,7 +668,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         abstract = {Combined quantum mechanics/molecular mechanics (QM/MM) methods have been widely used in multi-scale modelling and simulations of physical, chemical and biological processes in complex environments. In this review, we provide an overview of the recently developed QM/MM algorithms, with emphasis on our works, towards the ultimate goal of establishing an open boundary between the QM and MM subsystems. The open boundary is characterised by on-the-fly exchanges of partial charges and atoms between the QM and MM subsystems, allowing us to focus on the small QM subsystem of primary interest in dynamics simulations. An open-boundary scheme has the promise to the utilisations of small QM subsystems, high-levels of QM theory and long simulation times, which can potentially lead to new insights.},
         language = {English},
         number = {1-3},
-        journal = {Molecular Simulation},
+        journal = {Mol. Sim.},
         author = {Pezeshki, Soroosh and Lin, Hai},
         month = feb,
         year = {2015},
@@ -684,7 +684,7 @@ author = "Xavier Assfeld and Jean-Louis Rivail"
         abstract = {Generalised gradient approximated (GGA) density functional theory (DFT) typically overestimates polarisability and bond-lengths, and underestimates force constants of covalent bonds. To overcome this problem we show that one can use empirical force correcting atom centred potentials (FCACPs), parametrised for every nuclear species. Parameters are obtained through minimisation of a penalty functional that explicitly encodes hybrid DFT forces and static polarisabilities of reference molecules. For hydrogen, fluorine, chlorine and carbon the respective reference molecules consist of H-2, F-2, Cl-2 and CH4. The transferability of this approach is assessed for harmonic frequencies in a small set of chlorofluorocarbon molecules. Numerical evidence, gathered for CF4, CCl4, CCl3F, CCl2F2, CClF3, ClF, HF, HCl, CFH3, CF2H2, CF3H, CHCl3, CH2Cl2 and CH3Cl indicates that the GGA+FCACP level of theory yields harmonic frequencies that are significantly more consistent with hybrid DFT values, as well as slightly reduced molecular polarisability.},
         language = {English},
         number = {14-15},
-        journal = {Molecular Physics},
+        journal = {Mol. Phys.},
         author = {von Lilienfeld, O. Anatole},
         month = aug,
         year = {2013},
@@ -697,7 +697,7 @@ Comp. Chem. 33, 580-592 (2012)
 @article{multiwfn,
 author = {Lu, Tian and Chen, Feiwu},
 title = {Multiwfn: A multifunctional wavefunction analyzer},
-journal = {Journal of Computational Chemistry},
+journal = {J. Comput. Chem.},
 volume = {33},
 number = {5},
 year = {2012},
@@ -745,7 +745,7 @@ doi = {10.1002/jcc.22885},
 	doi = {10.1063/1.1674909},
 	abstract = {The FSGO model is applied to a large group of diatomic molecules of first‐row and second‐row atoms, namely, Li2, Be2, B2, C2, N2, O2, F2, CO, PN, P2, CS, SiO, LiF, LiCl, NaF, NaCl, LiNa, and Na2. Groups of diatomic molecules of similar assumed bond structure—CO and N2; N2, PN, and P2; CO, CS, and SiO; LiF, LiCl, NaF, and NaCl; Li2, LiNa, and Na2—are compared within each group. All the bond lengths of the previous systems are predicted quantitatively with an average deviation of 7\%.},
 	number = {2},
-	journal = {The Journal of Chemical Physics},
+	journal = {J. Chem. Phys.},
 	author = {Chu, San Y. and Frost, Arthur A.},
 	month = jan,
 	year = {1971},
@@ -760,7 +760,7 @@ doi = {10.1002/jcc.22885},
 	doi = {10.1016/0009-2614(75)85576-X},
 	abstract = {In certain saturated σ-bonded molecules, the localised basis functions of the non-orthogonal floating spherical gaussian orbital (FSGO) model are shown to behave as spherical “packing orbitals”. A simple, direct interpretation of the results of the FSGO model is described and some consequences of this property are given.},
 	number = {1},
-	journal = {Chemical Physics Letters},
+	journal = {Chem. Phys. Lett.},
 	author = {Blustin, Peter H.},
 	month = aug,
 	year = {1975},
@@ -775,7 +775,7 @@ doi = {10.1002/jcc.22885},
 	doi = {10.1016/0009-2614(78)85659-0},
 	abstract = {A gaussian based model potential is used within the FSGO formalism to study a series of open-shell systems (e.g. LiH+, NaH+, Li+2 and LiNa+). Results for calculated equilibrium geometries and dissociation energies are compared to the corresponding quantities from available all-electron ab initio studies and other more elaborate theoretical estimates. The overall agreement is quite satisfactory.},
 	number = {1},
-	journal = {Chemical Physics Letters},
+	journal = {Chem. Phys. Lett.},
 	author = {Mehandru, S. P. and Ray, N. K.},
 	month = feb,
 	year = {1978},
@@ -786,7 +786,7 @@ doi = {10.1002/jcc.22885},
 Author = {Ichikawa, Yuichi and Kato, Tsuyoshi and Yamanouchi, Kaoru},
 Title = {{Non-adiabatic electron-proton couplings in H-2 by floating Gaussian
    method}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{2016}},
 Volume = {{658}},
 Pages = {{347-353}},
@@ -802,7 +802,7 @@ Unique-ID = {{ISI:000382409800061}},
 Author = {Kuchitsu, T. and Tachikawa, M. and Shiga, M.},
 Title = {{Attosecond electron dynamics with linear combination of floating
    gaussian type basis function}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{2006}},
 Volume = {{433}},
 Number = {{1-3}},
@@ -849,7 +849,7 @@ Author = {Lu, SI},
 Title = {{A diffusion quantum Monte Carlo method based on floating spherical
    Gaussian orbitals and Gaussian geminals: Dipole moment of lithium
    hydride molecule}},
-Journal = {{JOURNAL OF CHEMICAL PHYSICS}},
+Journal = {{J. Chem. Phys.}},
 Year = {{2001}},
 Volume = {{114}},
 Number = {{9}},
@@ -907,7 +907,7 @@ Unique-ID = {{ISI:A1993MJ99500005}},
 Author = {HELGAKER, T and ALMLOF, J},
 Title = {{MOLECULAR WAVE-FUNCTIONS AND PROPERTIES CALCULATED USING FLOATING
    GAUSSIAN-ORBITALS}},
-Journal = {{JOURNAL OF CHEMICAL PHYSICS}},
+Journal = {{J. Chem. Phys.}},
 Year = {{1988}},
 Volume = {{89}},
 Number = {{8}},
@@ -924,7 +924,7 @@ Unique-ID = {{ISI:A1988T019400053}},
 Author = {KLAHN, B},
 Title = {{THE CONVERGENCE OF CI CALCULATIONS FOR ATOMIC AND MOLECULAR ELECTRONIC
    BOUND-STATES IN A BASIS OF FLOATING GAUSS ORBITALS}},
-Journal = {{JOURNAL OF CHEMICAL PHYSICS}},
+Journal = {{J. Chem. Phys.}},
 Year = {{1985}},
 Volume = {{83}},
 Number = {{11}},
@@ -938,7 +938,7 @@ Unique-ID = {{ISI:A1985AUR0400053}},
 Author = {ADAMOWICZ, L and BARTLETT, RJ},
 Title = {{EXTENDED FLOATING SPHERICAL GAUSSIAN-BASIS SETS FOR MOLECULES -
    ALTERNATIVE CORRELATING ORBITALS FOR MOLECULAR-ENERGY CALCULATIONS}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1984}},
 Volume = {{110}},
 Number = {{4}},
@@ -955,7 +955,7 @@ Author = {ADAMOWICZ, L and BARTLETT, RJ},
 Title = {{EXTENDED FLOATING SPHERICAL GAUSSIAN-BASIS SETS FOR MOLECULES - FSGO
    BASIS FOR USE IN ADVANCED CORRELATED CALCULATIONS OF
    ELECTRONIC-STRUCTURES}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1984}},
 Volume = {{110}},
 Number = {{4}},
@@ -971,7 +971,7 @@ Unique-ID = {{ISI:A1984TN42200007}},
 Author = {ADAMOWICZ, L and BARTLETT, RJ},
 Title = {{EXTENDED FLOATING SPHERICAL GAUSSIAN-BASIS SETS FOR MOLECULES -
    GENERATION PROCEDURE AND RESULTS FOR H2O}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1984}},
 Volume = {{105}},
 Number = {{2}},
@@ -1001,7 +1001,7 @@ Unique-ID = {{ISI:A1980JR48100005}},
 Author = {MEHANDRU, SP and RAY, NK},
 Title = {{FLOATING SPHERICAL GAUSSIAN ORBITAL (FSGO) STUDIES WITH A MODEL
    POTENTIAL - SOME OPEN-SHELL SYSTEMS}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1978}},
 Volume = {{54}},
 Number = {{1}},
@@ -1044,7 +1044,7 @@ Unique-ID = {{ISI:000207924400001}},
 Author = {MEHANDRU, SP and RAY, NK},
 Title = {{FLOATING SPHERICAL GAUSSIAN ORBITAL (FSGO) STUDIES WITH A MODEL
    POTENTIAL - ALKALI-HALIDES}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1977}},
 Volume = {{50}},
 Number = {{3}},
@@ -1058,7 +1058,7 @@ Unique-ID = {{ISI:A1977DW91300035}},
 Author = {RAY, NK and MEHANDRU, SP and SWITALSKI, JD},
 Title = {{FLOATING SPHERICAL GAUSSIAN ORBITAL (FSGO) STUDIES WITH A MODEL
    POTENTIAL - SOME 2ND ROW HYDRIDES}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1977}},
 Volume = {{47}},
 Number = {{3}},
@@ -1099,7 +1099,7 @@ Unique-ID = {{ISI:A1977DK39300011}},
 Author = {BARTHELAT, JC and DURAND, P},
 Title = {{CAPABILITY OF PSEUDOPOTENTIAL METHODS TO SIMULATE ALL-ELECTRON
    CALCULATIONS WITH FLOATING SPHERICAL GAUSSIAN ORBITALS}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1976}},
 Volume = {{40}},
 Number = {{3}},
@@ -1139,7 +1139,7 @@ Unique-ID = {{ISI:A1976CQ56400003}},
 @article{ ISI:A1975AQ00800001,
 Author = {BLUSTIN, PH},
 Title = {{FLOATING GAUSSIANS - UNUSUAL PROPERTY}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1975}},
 Volume = {{35}},
 Number = {{1}},
@@ -1152,7 +1152,7 @@ Unique-ID = {{ISI:A1975AQ00800001}},
 @article{ ISI:A1975AT25100002,
 Author = {BRAILSFORD, DF and HALL, GG and HEMMING, N and MARTIN, D},
 Title = {{FLOATING S-TYPE AND P-TYPE GAUSSIAN ORBITALS}},
-Journal = {{CHEMICAL PHYSICS LETTERS}},
+Journal = {{Chem. Phys. Lett.}},
 Year = {{1975}},
 Volume = {{35}},
 Number = {{4}},
@@ -1172,7 +1172,7 @@ Unique-ID = {{ISI:A1975AT25100002}},
 	abstract = {Based on two-component relativistic atomic calculations, a free electron density function (EDF) library has been developed for nearly all the known ECPs of the elements Li (Z = 3) up to Ubn (Z = 120), which can be interfaced into modern quantum chemistry programs to save the .wfx wavefunction file. The applicability of this EDF library is demonstrated by the analyses of the quantum theory of atoms in molecules (QTAIM) and other real space functions on HeCuF, , OgF4, and TlCl3(DMSO)2. When a large-core ECP is used, it shows that the corrections by EDF may significantly improve the properties of some density-derived real space functions, but they are invalid for the wavefunction-depending real space functions. To classify different chemical bonds and especially some nonclassical interactions, a list of universal criteria has also been proposed. © 2018 Wiley Periodicals, Inc.},
 	language = {en},
 	number = {22},
-	journal = {Journal of Computational Chemistry},
+	journal = {J. Comput. Chem.},
 	author = {Zou, Wenli and Cai, Ziyu and Wang, Jiankang and Xin, Kunyu},
 	month = aug,
 	year = {2018},
@@ -1219,7 +1219,7 @@ Unique-ID = {{ISI:A1975AT25100002}},
 	doi = {10.1016/S0009-2614(98)00228-0},
 	abstract = {We have performed ab initio restricted Hartree–Fock (RHF) and restricted second-order Møller–Plesset perturbation theory (RMP2) calculations of the relative energies of all C20H12, C18H12 and C14H10 polycyclic aromatic hydrocarbons (PAHs). Since all of these PAH wavefunctions exhibit large unrestricted Hartree–Fock (UHF) instabilities, the C14H10 PAHs were also studied using higher levels of electron correlation. Additionally, the role of UHF instabilities was investigated for the the linear conjugated polyenes from C2H4 to C20H22. Our results suggest that the RHF and RMP2 methods yield energies in relatively good agreement with highly electron-correlated methods, but the UHF instabilities indicate a fundamental shortcoming of the single determinant wavefunction description of these systems.},
 	number = {5},
-	journal = {Chemical Physics Letters},
+	journal = {Chem. Phys. Lett.},
 	author = {Colvin, Michael E and Janssen, Curtis L and Seidl, Edward T and Nielsen, Ida M. B and Melius, Carl F},
 	month = may,
 	year = {1998},
@@ -1263,7 +1263,7 @@ Unique-ID = {{ISI:A1975AT25100002}},
 	doi = {10.1063/1.4986975},
 	language = {en},
 	number = {24},
-	journal = {The Journal of Chemical Physics},
+	journal = {J. Chem. Phys.},
 	author = {Sokolov, Alexander Yu. and Guo, Sheng and Ronca, Enrico and Chan, Garnet Kin-Lic},
 	month = jun,
 	year = {2017},
@@ -1292,13 +1292,10 @@ Unique-ID = {{ISI:A1975AT25100002}},
 @article{artemyev_photoelectron_2015,
 	title = {Photoelectron circular dichroism in the multiphoton ionization by short laser pulses. {I}. {Propagation} of single-active-electron wave packets in chiral pseudo-potentials},
 	volume = {142},
-	issn = {0021-9606, 1089-7690},
-	url = {http://aip.scitation.org/doi/10.1063/1.4922690},
 	doi = {10.1063/1.4922690},
 	language = {en},
 	number = {24},
-	urldate = {2018-10-25},
-	journal = {The Journal of Chemical Physics},
+	journal = {J. Chem. Phys.},
 	author = {Artemyev, Anton N. and Müller, Anne D. and Hochstuhl, David and Demekhin, Philipp V.},
 	month = jun,
 	year = {2015},
@@ -1307,13 +1304,10 @@ Unique-ID = {{ISI:A1975AT25100002}},
 @article{lewin_modified_2008,
 	title = {Modified {Carbon} {Pseudopotential} for {Use} in {ONIOM} {Calculations} of {Alkyl}-{Substituted} {Metallocenes} $^{\textrm{†}}$ $^{\textrm{‡}}$},
 	volume = {112},
-	issn = {1089-5639, 1520-5215},
-	url = {http://pubs.acs.org/doi/abs/10.1021/jp711830a},
 	doi = {10.1021/jp711830a},
 	language = {en},
 	number = {50},
-	urldate = {2018-10-25},
-	journal = {The Journal of Physical Chemistry A},
+	journal = {J. Phys. Chem. A},
 	author = {Lewin, John L. and Cramer, Christopher J.},
 	month = dec,
 	year = {2008},
