remove toc from main file

--- a/main.tex
+++ b/main.tex
@@ -43,21 +43,21 @@ Pseudo-potentials, $sp^2 carbon$, PAH, aromaticity, $\pi$ system.
 \end{wileykeywords}
 
 \clearpage
-
-\begin{figure}[h]
-\centering
-\colorbox{background-color}{
-\fbox{
-\begin{minipage}{1.0\textwidth}
-\includegraphics[width=50mm,height=50mm]{graphical_abstract.eps} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
-%\includegraphics[width=110mm,height=20mm]{cc.eps}
-A pseudo-potential system for an sp\(^{2}\) carbon atom is built and tested as a building block for various pseudo-hydrocarbon polyenes and polycyclic aromatic hydrocarbons.  
-It is employed in \textsl{ab-initio} calculations in which several physical characteristics are found to be well-reproduced by the pseudo-system. 
-This approach is capable of reproducing the $\pi$ electron systems of planar hydrocarbons at low computational cost.
-\\
-\end{minipage}
-}}
-\end{figure}
+% 
+% \begin{figure}[h]
+% \centering
+% \colorbox{background-color}{
+% \fbox{
+% \begin{minipage}{1.0\textwidth}
+% \includegraphics[width=50mm,height=50mm]{graphical_abstract.eps} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
+% %\includegraphics[width=110mm,height=20mm]{cc.eps}
+% A pseudo-potential system for an sp\(^{2}\) carbon atom is built and tested as a building block for various pseudo-hydrocarbon polyenes and polycyclic aromatic hydrocarbons.  
+% It is employed in \textsl{ab-initio} calculations in which several physical characteristics are found to be well-reproduced by the pseudo-system. 
+% This approach is capable of reproducing the $\pi$ electron systems of planar hydrocarbons at low computational cost.
+% \\
+% \end{minipage}
+% }}
+% \end{figure}
 
 
 \makeatletter
