--- a/main.tex
+++ b/main.tex
@@ -167,13 +167,18 @@ Figure~\ref{figure:diagram} helps to explain our choice of criteria for gauging 
 
 We would then take our CH$_3^{\bullet}$ pseudo-potentials and create from them a pseudo-ethylene, the smallest $\pi$ system.
 In addition to the HOMO energy of the pseudo-ethylene, we decided we would also compare the $\pi-\pi^{*}$ singlet-triplet energy gap, 
-and the 1$^{st}$ ionisation energy. The reproduction of the ionisation potential shows the extent to which the pseudo-system 
-can still behave like the reference system upon losing an electron, whilst the $\Delta_{ST}$ ensures that the first virtual 
+and the 1$^{st}$ ionisation energy. 
+The reproduction of the $\Delta_{ST}$ ensures that the first virtual 
 orbitals are well-positioned, which is an indicator of the quality of the system for the reproduction of spectroscopic and 
-chemical interactions.
+chemical interactions, whilst the reproduction of the ionisation potential shows the extent to which the pseudo-system 
+can still behave like the reference system upon losing an electron. As discussed hereafter, this latter property is 
+particularly critical, as all $\sigma$ electrons are replaced by the pseudo-potentials, and therefore
+they are not explicitly treated. 
 
 \section*{\sffamily \large Pseudo-potential definition} \label{secpotdef}
 
+The potentials were extracted on the basis of Hartree-Fock calculations, as it is unbiased in terms of
+electronic correlation. 
 As in our previous work,\cite{drujon_pseudopotentials_2013}
 we take the planar CH\(^{\bullet}_{3}\) as our starting system to be reproduced.
 It is the smallest system containing one and only one sp$^2$ hybridised carbon atom. This choice allows us to isolate the different electrostatic interactions to build a physically meaningful model. We make use of two kinds of Gaussian pseudo-potentials,\cite{me_structure_theory} of \(s\) and \(p\) shapes. As we want to avoid modifying the quantum chemistry software itself, the pseudo-potentials have a semi-local form and we choose to preserve the \(r^{-1}\) behaviour as in Huzinaga's work.
@@ -221,6 +226,15 @@ In the final version of the extraction, the pseudo-ethylene system was: (1) Opti
 The final potential set gives an error of 5.1\% for the HOMO energy of CH\(^{\bullet}_{3}\), but it
 performs much better than the initial for the ethylene,
 giving us a 0.0\% error on the $\Delta_{ST}$, and errors of 2.9\% and 7.8\% for the HOMO and 1$^{st}$ ionisation energies respectively.
+As the $\sigma$ electrons are not treated explicitely in our model,
+the effect of their reorganisation in the cation can not
+be recovered entirely and we expect an error in the ionisation energy that is inherent
+in the method. For comparison, the all-electron energy of the $(\text{C}_2\text{H}_4)^+$ cation
+was computed, by freezing all the orbitals but the SOMO, as they were obtained from
+the Hartree-Fock calculation on the neutral $\text{C}_2\text{H}_4$ (def2-SVP basis set).
+The deviation from the all-electron fully relaxed calculation is of 0.946~eV, which
+is comparable, and slightly higher, than the error obtained with
+our potentials (error of 0.715~eV).
 
 The potentials were extracted on the basis of Hartree-Fock calculations, but they are transferable
 to other methods and they are employed within the DFT and TD-DFT frameworks in the application section.
@@ -281,7 +295,12 @@ However, TD-DFT results are very good.
 Figure~\ref{fig:alkenes_hf_dft} and \ref{fig:long_chain_graphs} show in detail the results obtained with the PBE0 functional for the small and large polyenes, respectively.
 For the small polyenes, in the pseudo-systems, the HOMO has systematically a slightly lower energy than in the reference,
 but absolute errors are small (between 0.18 and 0.3 eV) and the pattern of increasing HOMO energies with the size of the chain is well-replicated. As a consequence of this underestimation, 
-ionisation energies are slightly higher than in reference calculations, even if errors are small and tendencies are well-reproduced. 
+ionisation energies are slightly higher than in reference calculations, even if tendencies are well-reproduced. 
+We recall here that this quantity is particularly challenging for our method, as we do not account for
+the reorganization of the $\sigma$ electrons in the cation.
+\textsl{AS A REFERENCE??:Errors are smaller than (but close to) those obtained by freezing in the cation calculations 
+all the orbitals but the SOMO, as they are obtained in the calculations for the neutral systems, see the Supplementary
+Information for details.}
 More interestingly, a very good agreement between reference and pseudo-systems is obtained for TD-DFT
 calculations (for the $\pi-\pi^*$ excitation), which suggests that the virtual space is of good
 quality.
@@ -390,6 +409,10 @@ with the size of the basis set as expected.
 The gain ranges from 2.4 (def2-SV(P)) to 8 (QZVPPD).
 
 \section*{\sffamily \large Physical meaning of the \(p_{z}\) pseudo-potential} \label{minimalpotguess}
+
+In this paragraph we propose a physical interpretation of our pseudo-potentials. This
+provides a conceptual advantage with respect to our previous work,\cite{drujon_pseudopotentials_2013} 
+where the pseudo-potentials were simply relying on a shifting of the orbitals to map the reference ones.
 
 The pseudo-system contains only one proton. However, the effective charge felt by the $p$ electron in a carbon atom should be larger: for instance Slater's rules suggest an effective charge of $Z_{eff}=2.4$. Thus we must account for this difference. We shall see that this role is filled by the $p$ potential once optimised. 
 
