--- a/main.tex
+++ b/main.tex
@@ -475,19 +475,25 @@ In this paper pseudo-potentials have been developed for sp$^{2}$-hybridised carb
 Their main features are that: 
 (1) They are fully atomic, meaning that they can be placed relative only to the carbon atom itself and the direction of its bonds. 
 (2) We could show that not only were the occupied orbitals well-reproduced by the use of these new potentials, but also that the virtual space is of good quality for excited states calculation. 
-They are able to reproduce electronic properties including HOMO, 1$^{st}$ ionisation and singlet-triplet gap energies, as well as reproduce physically reasonable absorption spectra and the electronic
-density leads to the same AIM view of the bonding pattern.
+%They are able to reproduce electronic properties including HOMO, 1$^{st}$ ionisation and singlet-triplet gap energies, as well as reproduce physically reasonable absorption spectra and the electronic
+%density leads to the same AIM view of the bonding pattern.
+They are able to reproduce physically reasonable absorption spectra and the electronic
+density leads to the same AIM view of the bonding pattern. Ionisation energies have
+also been tested and the expected trends are obtained, even if clearly our
+model can not recover the effects of the reorganization of the $\sigma$ electrons
+in the cation. However, deviations
+from the all-electron calculations decrease with the size of the system.
 (3) They can be employed with both Hartree-Fock and DFT methods including PBE0, PBE, TPSS and TPSSh functionals. 
 (4) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)),
 or a mixture of both (as in the polyenes or at the edge of fused ring systems). 
 (5) They offer a significant gain in computational time as compared to all-electron calculations.
 
-Our work remains ongoing, and we envisage two areas for further development
-(1) we are at the early stages of creating potentials that can successfully interact with neighbouring all-electron atoms.
-
+Our work remains ongoing, and we envisage two areas for further development.
+(1) We are at the early stages of creating potentials that can successfully interact with neighbouring all-electron atoms.
 This will mean producing potentials which are capable of bonding covalently with their all-electron neighbours, \textsl{i.e.} adding another electron to the pseudo-carbon for every bond.
 Our preliminary results (to be submitted in due course) show that optimisation of bond distances is possible.
 Such potentials could be useful as link atoms in QM/MM calculations, functioning similarly to Quantum Capping Potentials,\cite{dilabio_simple_2002} though this is not our primary motivation.
+
 (2) We would like further to test and to expand this work into a general method for increasing computational efficiency in large systems in
 which there are many sp$^{2}$ carbon units, both in SCF calculations and the generation of electronic spectra.
 This could be particularly useful in large molecules which are optically active, such as helicenes, to simulate ECD spectra.
@@ -743,7 +749,7 @@ J.\ Comput.\ Chem.
 \clearpage
 
 \begin{table}[h]
-\caption{\label{table:potential_params} Comparison of molecular properties of pseudo-CH$^{\bullet}_{3}$ and pseudo-C$_{2}$H$_{4}$ molecules, along with pseudo-potential parameters and all-electron values.}
+\caption{\label{table:potential_params} Comparison of molecular properties of pseudo-CH$^{\bullet}_{3}$ and pseudo-C$_{2}$H$_{4}$ molecules, along with pseudo-potential parameters and all-electron values (Hartee-Fock level).}
 \begin{tabular}{| c | c | c | c | c | c | c | c| }
 \hline
  & \multicolumn{2}{c}{\textbf{$\bm{p}$}} & \multicolumn{2}{c|}{$\bm{s}$} & \multicolumn{3}{c|}{\textbf{Energy (eV)}} \\
